[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/tilesets/tiles_world.tres" type="TileSet" id=1]
[ext_resource path="res://data/levels/Level.gd" type="Script" id=2]
[ext_resource path="res://data/player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/tilesets/tiles_items.tres" type="TileSet" id=4]
[ext_resource path="res://assets/tilesets/tiles_spikes.tres" type="TileSet" id=5]

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMapWorld" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMapObjects" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMapPickups" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="TileMapSpikes" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 16, 16 )
format = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 3 )]
visible = false

[node name="PlayerSpawn" type="Position2D" parent="Player"]
